# dnomia-knowledge

./: .gitignore  .knowledge.toml  README.md  architecture.md  pyproject.toml
docs/: architecture.md
docs/plans/: 2026-03-02-dnomia-knowledge-design.md  2026-03-03-sprint-1-implementation.md  2026-03-13-continuous-indexing.md  2026-03-14-trace-prerequisites.md
docs/specs/: 2026-03-13-continuous-indexing-design.md  2026-03-14-trace-cli-design.md
scripts/: axe-review.sh  checkpoint-wip.sh  restore-wip.sh
src/dnomia_knowledge/: __main__.py  cli.py  embedder.py  git_analyze.py  git_sync.py  graph.py  indexer.py  lock.py  models.py  presets.py  registry.py  search.py  server.py  store.py
src/dnomia_knowledge/chunker/: __init__.py  ast_chunker.py  base.py  languages.py  md_chunker.py
src/dnomia_knowledge/hooks/: post_tool_use.py  pre_tool_use.py
tests/: conftest.py  test_ast_chunker.py  test_chunker.py  test_cli.py  test_continuous.py  test_embedder.py  test_git_analyze.py  test_git_integration.py  test_git_sync.py  test_graph.py  test_hooks.py  test_indexer.py  test_integration.py  test_lock.py  test_presets.py  test_registry.py  test_search.py  test_server.py  test_store.py
